# bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: config.py  main.py
app/bot/handlers/: __init__.py  admin.py  buy.py  help.py  language.py  renew.py  services.py  start.py  support.py  trial.py  wallet.py
app/bot/i18n/: en.json  fa.json
app/bot/keyboards/: admin.py  user.py
app/bot/middlewares/: admin_auth.py  i18n.py  throttling.py
app/db/: models.py  repositories.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py  0002_support_and_discounts.py  0003_crypto_payments.py  0004_wallet_transactions.py  0005_referrals.py  0006_growth_and_ops.py  0007_free_trials.py  0008_bulk_batches.py
app/marzban/: client.py  schemas.py
app/services/: admin_service.py  bulk_service.py  crypto_service.py  discount_service.py  order_service.py  payment_service.py  referral_service.py  trial_service.py  vpn_service.py  wallet_service.py
app/utils/: formatters.py  logging.py  validators.py
