[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marzban-telegram-vpn-bot"
version = "0.1.0"
description = "Dockerized bilingual Telegram bot for selling Marzban V2Ray VPN traffic packages"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.6,<4",
  "aiohttp>=3.9,<4",
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "python-json-logger>=2.0,<3",
  "redis>=5.0,<6",
  "SQLAlchemy>=2.0,<3",
  "tenacity>=8.2,<9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
